--- a/templates/tags-input.html
+++ b/templates/tags-input.html
@@ -1,4 +1,6 @@
-<div class="host" tabindex="-1" ng-click="eventHandlers.host.click()" ti-transclude-append>
+<div>
+<i class="material-icons tag-icon">loyalty</i>
+<div class="host input-field" tabindex="-1" ng-click="eventHandlers.host.click()" ti-transclude-append>
   <div class="tags" ng-class="{focused: hasFocus}">
     <ul class="tag-list">
       <li class="tag-item"
@@ -23,3 +25,4 @@
            ti-autosize>
   </div>
 </div>
+<div>
