--- a/templates/tag-item.html
+++ b/templates/tag-item.html
@@ -1,2 +1,4 @@
+<div class="chip">
 <span ng-bind="$getDisplayText()"></span>
 <a class="remove-button" ng-click="$removeTag()" ng-bind="::$$removeTagSymbol"></a>
+</div>
